(add|feat): adicionando docker e docker compose, atualizando readme

--- a/mini-netflix-server/package.json
+++ b/mini-netflix-server/package.json
@@ -8,7 +8,11 @@
     "build": "sucrase ./src -d .dist/ --transforms typescript,imports",
     "eslint": "./node_modules/.bin/eslint --init"
   },
-  "keywords": [],
+  "keywords": [
+    "nodejs",
+    "express",
+    "docker"
+  ],
   "author": "Guilherme Gules Moreira",
   "license": "ISC",
   "devDependencies": {
