(refactor): melhorando docker

--- a/mini-netflix-server/Dockerfile
+++ b/mini-netflix-server/Dockerfile
@@ -1,8 +1,9 @@
-FROM node
+FROM node:alpine
 
-WORKDIR mkdir -p /usr/app
+WORKDIR /usr/app
 
-COPY package*.json ./
+COPY package*.json ./ 
+
 RUN npm install
 
 COPY . .
