--- a/mini-netflix-server/docker-compose.yml
+++ b/mini-netflix-server/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3"
 
 services: 
-  app: 
+  mini-netflix-server:
+    image: mini-netflix-server 
     build: .
-    command: npm start
     ports: 
-      - "3333:3333"
+      - 3333:3333
     volumes:
       - .:/usr/app
