--- a/mini-netflix-server/docker-compose.yml
+++ b/mini-netflix-server/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mini-netflix-server:
     image: mini-netflix-server 
     build: .
+    environment: 
+      - SERVER
     ports: 
       - 3333:3333
-    volumes:
-      - .:/usr/app
