--- a/mini-netflix-server/package.json
+++ b/mini-netflix-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/server/server.ts",
-    "build": "sucrase ./src -d .dist/ --transforms typescript,imports",
+    "build": "sucrase ./src -d dist/ --transforms typescript,imports",
     "eslint": "./node_modules/.bin/eslint --init"
   },
   "keywords": [
