--- a/mini-netflix-server/docker-compose.yml
+++ b/mini-netflix-server/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     image: mini-netflix-server 
     build: .
     environment: 
-      - SERVER
+      - PORT
     ports: 
       - 3333:3333
